name:                longrun
version:             0.9.0.0
synopsis:            Long running process support routines
homepage:            https://github.com/zoranbosnjak/longrun
license:             GPL-3
license-file:        LICENSE
author:              Zoran Bošnjak
maintainer:          zoran.bosnjak@via.si
category:            Concurrency
build-type:          Simple
cabal-version:       >=1.10

library
    default-extensions: StrictData
    ghc-options: -O2 -Wall -funbox-strict-fields
    default-language:    Haskell2010
    exposed-modules:
        Control.Concurrent.Longrun
        , Control.Concurrent.Longrun.Base
        , Control.Concurrent.Longrun.Subprocess
        , Control.Concurrent.Longrun.Variable
        , Control.Concurrent.Longrun.Queue
        , Control.Concurrent.Longrun.Timer
    build-depends:
        base >=4.6 && <4.10
        , async >=2.1 && <2.2
        , containers >=0.5 && <0.6
        , deepseq >=1.4 && <1.5
        , hslogger >=1.2 && <1.3
        , mtl >= 2.2 && <2.3
        , random >=1.1 && <1.2
        , stm >=2.4 && <2.5
        , time >=1.6 && <1.7
        , transformers >=0.5 && <0.6

test-suite test-longrun
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    default-language: Haskell2010
    default-extensions: StrictData
    ghc-options: -O2 -Wall -funbox-strict-fields -with-rtsopts=-T
    build-depends:
          base
        , HUnit
        , QuickCheck
        , containers
        , hslogger
        , longrun
        , mtl
        , random
        , stm
        , test-framework
        , test-framework-hunit
        , test-framework-quickcheck2
        , transformers

