name:                longrun
version:             0.12.0
synopsis:            Long running process support routines
homepage:            https://github.com/zoranbosnjak/longrun
license:             GPL-3
license-file:        LICENSE
author:              Zoran Bošnjak
maintainer:          zoran.bosnjak@via.si
category:            Concurrency
build-type:          Simple
cabal-version:       >=1.10

library
    default-extensions: StrictData
    ghc-options: -O2 -Wall -funbox-strict-fields
    default-language:    Haskell2010
    exposed-modules:
        Control.Concurrent.Longrun
        , Control.Concurrent.Longrun.Base
        , Control.Concurrent.Longrun.Subprocess
        , Control.Concurrent.Longrun.Variable
        , Control.Concurrent.Longrun.Queue
        , Control.Concurrent.Longrun.Timer
    build-depends:
        base
        , async
        , containers
        , deepseq
        , hslogger
        , mtl
        , random
        , stm
        , time
        , transformers

test-suite test-longrun
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    default-language: Haskell2010
    default-extensions: StrictData
    ghc-options: -O2 -Wall -funbox-strict-fields -with-rtsopts=-T
    other-modules:
        InMemoryLogger
        , TestLongrun
        , TestQueue
        , TestSubprocess
        , TestTimer
        , TestVariable
        , TestWait
        , Utils
    build-depends:
          base
        , HUnit
        , QuickCheck
        , containers
        , hslogger
        , longrun
        , mtl
        , random
        , stm
        , test-framework
        , test-framework-hunit
        , test-framework-quickcheck2
        , transformers

